Bug 1384398 - Separate family names in font-family serialization with ", ". r=emilio

MozReview-Commit-ID: 9DBCXoy59g3

--HG--
extra : rebase_source : 2dbabd5e0e9426d1e5c943904d313e6e30dc62b6